ping-pong/manifest_old/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: shared-logs-claim
      containers:
        - name: ping-pong
          image: titunidoc/devops_pingpong:2.714
          volumeMounts:
          - name: shared-logs
            mountPath: /usr/src/app/files
